--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Javascript project</title>
   <link rel="stylesheet" href="./style/style.css" />
   <!-- itraukiu javascript -->
-  <script src="./js/fetch.js" defer></script>
+  <!-- <script src="./js/fetch.js" defer></script> -->
+  <script src="./js/fetchAsync.js" defer></script>
 </head>
 
 <body>
@@ -17,6 +18,7 @@
     <div class="control">
       <button id="get1">Get me smthg</button>
     </div>
+    <p id="todo"></p>
   </div>
 
 </body>
