--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./style/style.css" />
   <!-- itraukiu javascript -->
   <!-- <script src="./js/fetch.js" defer></script> -->
-  <script src="./js/fetchAsync.js" defer></script>
+  <!-- <script src="./js/fetchAsync.js" defer></script> -->
+  <script src="./js/users.js" defer></script>
 </head>
 
 <body>
@@ -19,6 +20,14 @@
       <button id="get1">Get me smthg</button>
     </div>
     <p id="todo"></p>
+
+    <div id="users" class="users">
+      <div class="card card--user">
+        <img src="https://reqres.in/img/faces/1-image.jpg" alt="">
+        <h3>title</h3>
+        <p>email id</p>
+      </div>
+    </div>
   </div>
 
 </body>
