3. padaryti kad duomeny

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <h1>Fetch</h1>
     <div class="control">
-      <button id="get1">Get me smthg</button>
+      <button id="get1">Get Users</button>
     </div>
     <p id="todo"></p>
 
