sort with fetch

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1>Fetch</h1>
     <div class="control">
       <button id="get1">Get Users</button>
+      <button id="sort1">Sort Users by Name</button>
     </div>
     <p id="todo"></p>
 
