--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- itraukiu javascript -->
   <!-- <script src="./js/fetch.js" defer></script> -->
   <!-- <script src="./js/fetchAsync.js" defer></script> -->
-  <script src="./js/users.js" defer></script>
+  <!-- <script src="./js/users.js" defer></script> -->
+  <script src="./js/users-app.js" defer></script>
 </head>
 
 <body>
@@ -20,11 +21,13 @@
       <button id="get1">Get Users</button>
       <button id="sort1">Sort Users by Name</button>
     </div>
-    <p id="todo"></p>
 
-    <div id="users" class="users">
-
-    </div>
+    <section class="app">
+      <div class="left">
+        <ol id="usersList"></ol>
+      </div>
+      <div class="right"></div>
+    </section>
   </div>
 
 </body>
