--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <div class="left">
         <ol id="usersList"></ol>
       </div>
-      <div class="right"></div>
+      <div class="right">
+        <div id="currentUser"></div>
+      </div>
     </section>
   </div>
 
